修复bug：字体环境错误
CJK环境下song失效，改为gbsn （宋体）

\begin{CJK}{UTF8}{gbsn}

--- a/设计制造2.tex
+++ b/设计制造2.tex
@@ -12,7 +12,7 @@
 \setlength{\parindent}{2em} %设置首行缩进两字节
 
 \begin{document}               %begin与end成对出现
-\begin{CJK}{UTF8}{song}        %应用CJK环境
+\begin{CJK}{UTF8}{gbsn}        %应用CJK环境
  \pagestyle{fancy}
  \lhead{}
  \chead{}
