修改标题栏格式

--- a/Latex模板 - HW.tex
+++ b/Latex模板 - HW.tex
@@ -26,9 +26,10 @@
  \renewcommand{\footrulewidth}{0.4pt}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %标题
-\author{黄威}
-\title{latex模板}              
-\date{\today}
+\title{\huge LATEX模板 \\ \Large -模板小标题-}  
+\author{黄威 516021910249\\  
+\small 任课老师：XXX，\small 同组组员：XXX， \small 实验日期：XXX}            
+\date{}   %\today
 \maketitle                         %插入标题
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %摘要
