修改字号以及页边距

--- a/Latex模板 - HW.tex
+++ b/Latex模板 - HW.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{article}  
+\documentclass[11pt]{article}  
 \usepackage{CJK}               %引入CJK宏包
 \usepackage{multirow}
 \usepackage{indentfirst} %引入首行缩进宏包
@@ -6,9 +6,11 @@
 \usepackage{graphicx}
 \usepackage{subfigure}
 \usepackage{float}
+\usepackage{geometry}
 \usepackage{graphicx, subfig}
 \usepackage{fancyhdr}
 
+\geometry{left=3.0cm, right = 3cm, bottom = 3.5cm}       %设置页边距
 \setlength{\parindent}{2em} %设置首行缩进两字节
 
 \begin{document}               %begin与end成对出现
